--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.github.brianolsen87</groupId>
 	<artifactId>text-instructions</artifactId>
-	<version>0.11.0-SNAPSHOT</version>
+	<version>0.11.0</version>
 	<packaging>jar</packaging>
 
 	<name>OSRM Text Instructions - Java J2V8 Wrapper</name>
