--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: java
 sudo: false
-script: mvn clean verify
+script: mvn clean install -Dmaven.javadoc.skip=true -DskipTests=false -Dgpg.skip=true
